# fJmodels

./: .cproject  .gitignore  .project  .travis.yml  Makefile  Makefile.in  README.md  check_acts.cpp  configure  configure.ac  fJ_models.cpp  fJmodels.cpp  get_closed.cpp  gitcommands.txt  grid3.h  isodf4.cpp  isodf4.h  isopot.cpp  leg_pot2.cpp  leg_pot2.h  leg_pot3.cpp  makefile  moments.cpp  node1.h  oct_int_exp.h  param.txt  press.h  progressbar_old.hh  uv_orb3.h
HJ/: Compress.cc  EtildeJ.cpp  EtildeJ.h  Inline.h  Iso_check.cpp  Iso_check.h  LM_fit.cpp  LM_fit.h  Matrix.h  Norm.h  Numerics.cc  Numerics.h  Numerics.inline  Numerics.templates  Pi.h  Potential.h  Pspline.h  Structure.h  Types.h  Vector.h  WDMath.cc  computeJtheta.cpp  computeJtheta.h  eqs_of_motion.h  falPot.cc  falPot.h  inline2.h  isopotF.cpp  isopotF.h  numericPot.cpp  numericPot.h  potential_obj.cpp  potential_obj.h  surf_lib.cpp  surf_lib.cpp~  surf_lib.h  tools.cpp  tools.h  zbrent.cpp  zbrent.h
delta/: Delta.cpp  getDelta.cpp  tabulate.cpp
df/: DF.cpp  isodf4.cpp
include/: DF.h  Delta.h  ELz_grid.hh  GaussPts.h  GaussQuad.h  Grid.h  Integ.h  Potential.h  Progressbar.h  Rzuv.h  Stats.h  Tabulate.h  Utils.h  UtilsLeg.h  Uvpt.h  check_acts.h  eddington.hh  ini_potLEG.h  isodf4.h  isopot.h  leg_pot3.h  models.h  moments.h  mongo.h  node2.h  node3.h  oct_int.h  potLEG.h  potLeg.h  press.h  print.h  progressbar.hh  readParam.h  tables3.h  uvOrb.h  uv_orb2.h  writeOut.h
integ/: GaussQuad.cpp  Integ.cpp  moments.cpp  node1.cpp  node2.cpp  node3.cpp  oct_int.cpp
io/: print.cpp  readParam.cpp  writeOut.cpp
libs/: Stats.cpp  pmongo_c.cpp  pressstuff.cpp  tables3.cpp
models/: .models
pot/: Potential.cpp  ini_potLEG.cpp  isopot.cpp  leg_pot3.cpp  models.cpp  potLEG.cpp  potLeg.cpp
uvOrb/: Rzuv.cpp  Uvpt.cpp  uvOrb.cpp  uv_orb3.cpp
